<resources>
    <string name="app_name">Prioritify</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
    <string name="create">Create</string>
    <string name="create_new_task">Create New Task</string>
    <string name="start_date_time">Start Date and Time</string>
    <string name="select_start_date_time">Select Start Date and Time</string>
    <string name="end_date_time">End Date and Time</string>
    <string name="select_end_date_time">Select End Date and Time</string>
    <string name="title">Title</string>
    <string name="enter_task_title">Enter task title</string>
    <string name="description">Description</string>
    <string name="enter_task_description">Enter task description</string>
    <string name="choose_priority">Choose Priority</string>
</resources>
